# spoor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: Ai_conversation.md  custom_training_plan.md  flying_birds_analysis.md  implementation_plan.md  research_report.md  writeup.md  writeup_written_by_ai.md
src/: __init__.py  app.py  custom_tracker.yaml  detector.py  main.py  train.py  video_processor.py
tests/: __init__.py  test_processor.py
