[project]
name = "spoor-tracker"
version = "0.1.0"
description = "A video processing prototype for detecting and tracking birds."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ultralytics>=8.1.0",
    "opencv-python-headless>=4.8.0",
    "lapx>=0.5.5", # required by ultralytics for Bytrack/BoT-SORT
    "streamlit==1.35.0",
    "streamlit-drawable-canvas>=0.9.3",
    "pandas>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
